--- a/cvpr_submission/transfer_learning.tex
+++ b/cvpr_submission/transfer_learning.tex
@@ -17,7 +17,8 @@ question\footnote{%
 	For the COG dataset, the answer is a tuple, one for each frame in the video, whereas for typical video answering datasets,
 	only a single answer is needed for the entire video.}. % 
 If the domain elements consist of just the visual inputs, then the task is defined by the question so that each question 
-defines a separate task.
+defines a separate task.\newline
+
 \begin{definition}[\cite{pan2009survey}]
 	\label{defn:transfer}
 	Given a source domain $\cD_S$ and a source learning task $\cT_S$, a target domain $\cD_T$ and a target learning task $\cT_T$, transfer learning aims to help improve the 
