New title + remove "compositional".

--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -119,7 +119,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Transfer Learning in Multimodal Compositional and Relational Reasoning}
+\title{Transfer Learning in Visual and Relational Reasoning}
 
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
