Removing other occurences of "compositional".

--- a/cvpr_submission/introduction.tex
+++ b/cvpr_submission/introduction.tex
@@ -23,7 +23,7 @@ In this work, we focus on multi-modal learning~\cite{mogadala2019trends} combini
 and in particular, transfer learning for visual reasoning tasks with a rich logical structure, e.g., see~\cite{johnson2017clevr,yang2018dataset}. 
 While models such as BERT and ResNet can be transferred efficiently in the same modality they were pretrained on, challenges arise
 once the modalities have been fused.
-For example, in compositional reasoning problems that involve objects with multiple attributes,
+For example, in visual reasoning problems that involve objects with multiple attributes,
 feature representations in the source domain may be entangled and not easily transfer over to the target domain~\cite{johnson2017clevr}.
 In video reasoning, an additional challenge in the temporal dimension is whether a model trained on shorter video sequences will 
 transfer over to longer sequences~\cite{yang2018dataset,song2018explore}.
