--- a/cvpr_submission/related_work.tex
+++ b/cvpr_submission/related_work.tex
@@ -20,7 +20,7 @@
 \section{Related work}
 Visual Question Answering (VQA) is a challenging multimodal task that combines vision and language.  Most image question answering datasets and tasks focus on identifying object attributes, counting, and reasoning about their spatial-relations. Prior work generally relied on dense visual features produced by either CNNs~\cite{xiong2016dynamic,yang2016stacked} or object detection modules \cite{desta2018object}, and increasingly, recent models utilize the relationships among objects to augment those features with contextual information from each object’s surroundings \cite{teney2017graph, santoro2017simple}.  
 
-Another research focus area has been multimodal fusion and attention for VQA. For multimodal fusion, earlier methods used concatenation or element-wise multiplication between multimodal features~\cite{zhou2015simple, antol2015}. Others proposed more sophisticated methods such as different approximated bilinear pooling methods to effectively integrate the multimodal features with second-order feature interactions~\cite{fukui2016multimodal, kim2016hadamard}. Attention research in VQA has demonstrated that learning question-guided visual attention on image regions is the most promising approach~\cite{yang2016stacked, chen2015abc, ilievski2016focused}. Compositional reasoning tasks such as the CLEVR dataset, also benefit from multi-hop attention and reasoning methods~\cite{hudson2018compositional, song2018explore}. Visualization of attention maps also provides interpretability, which is an increasingly important aspect. The MAC model \cite{hudson2018compositional} is a great example of such an approach. The follow-on model by the same authors~\cite{hudson2019learning}, called Neural State Machine (NSM) takes a slightly different approach and reason over graph structures rather than directly over spatial maps of visual features.  Representing objects in a scene and their relationship as a graph is an obvious choice, which is another growing research direction~\cite{haurilet2019s, teney2017graph, kim2018dynamic}. 
+Another research focus area has been multimodal fusion and attention for VQA. For multimodal fusion, earlier methods used concatenation or element-wise multiplication between multimodal features~\cite{zhou2015simple, antol2015}. Others proposed more sophisticated methods such as different approximated bilinear pooling methods to effectively integrate the multimodal features with second-order feature interactions~\cite{fukui2016multimodal, kim2016hadamard}. Attention research in VQA has demonstrated that learning question-guided visual attention on image regions is the most promising approach~\cite{yang2016stacked, chen2015abc, ilievski2016focused}. Visual reasoning tasks such as the CLEVR dataset, also benefit from multi-hop attention and reasoning methods~\cite{hudson2018compositional, song2018explore}. Visualization of attention maps also provides interpretability, which is an increasingly important aspect. The MAC model \cite{hudson2018compositional} is a great example of such an approach. The follow-on model by the same authors~\cite{hudson2019learning}, called Neural State Machine (NSM) takes a slightly different approach and reason over graph structures rather than directly over spatial maps of visual features.  Representing objects in a scene and their relationship as a graph is an obvious choice, which is another growing research direction~\cite{haurilet2019s, teney2017graph, kim2018dynamic}. 
 
 Video question answering, aside from spatial queries, also focuses on questions that require \emph{temporal} reasoning. Early works~\cite{mun2017marioqa, xu2017video, yu2017end} used LSTMs to encode video frames and text queries to leverage temporal attention to selectively attend to essential frames in a video. These approaches might be sufficient for action-recognition type of tasks but fall short when spatio-temporal reasoning is required. Learning long-term dependencies is also another challenge that LSTMs may struggle with. Yin et al.~\cite{yin2019memory} recently proposed a Memory-Augmented Neural Network (MANN) architecture for video QA which leverages the external memory for storing and retrieving useful information in questions and videos and modeling long-term visual-textual dependencies.
 
