--- a/cvpr_submission/related_work.tex
+++ b/cvpr_submission/related_work.tex
@@ -24,4 +24,7 @@ Another research focus area has been multimodal fusion and attention for VQA. Fo
 
 Video question answering, aside from spatial queries, also focuses on questions that require \emph{temporal} reasoning. Early works~\cite{mun2017marioqa, xu2017video, yu2017end} used LSTMs to encode video frames and text queries to leverage temporal attention to selectively attend to essential frames in a video. These approaches might be sufficient for action-recognition type of tasks but fall short when spatio-temporal reasoning is required. Learning long-term dependencies is also another challenge that LSTMs may struggle with. Yin et al.~\cite{yin2019memory} recently proposed a Memory-Augmented Neural Network (MANN) architecture for video QA which leverages the external memory for storing and retrieving useful information in questions and videos and modeling long-term visual-textual dependencies.
 
-Our work is mostly related to the MAC and MANN type models. An important distinction of our approach is the frame-by-frame processing of the video input. Prior studies typically divide the whole video into clips; e.g., in~\cite{song2018explore}, the model extracts visual features from each frame and aggregates features first into clips, followed by aggregation over clips to form a single video representation. Nevertheless, when reasoning and producing the answer, the system has \emph{access to all frames}. Similarly, in Visual Dialog~\cite{das2017visual}, the system memorizes the whole dialog history. However, in real-time dialog or video monitoring, it is not always possible to keep the entire history of conversation nor all frames from the beginning of the recording.
+Our work is mostly related to the MAC~\cite{hudson2018compositional} as well as neural network models with
+external memory~\cite{graves2014neural, graves2016hybrid} that support flexible addressing mechanisms 
+including sequential- and content-based addressing. 
+An important distinction of our approach is the frame-by-frame processing of the video input. Prior studies typically divide the whole video into clips; e.g., in~\cite{song2018explore}, the model extracts visual features from each frame and aggregates features first into clips, followed by aggregation over clips to form a single video representation. Nevertheless, when reasoning and producing the answer, the system has \emph{access to all frames}. Similarly, in Visual Dialog~\cite{das2017visual}, the system memorizes the whole dialog history. However, in real-time dialog or video monitoring, it is not always possible to keep the entire history of conversation nor all frames from the beginning of the recording.
