--- a/cvpr_submission/experiments.tex
+++ b/cvpr_submission/experiments.tex
@@ -8,7 +8,7 @@ and involved incorporating variants of both datasets.
 For COG, the Canonical (easy) and Hard variant differ mainly on the number of frames in the video, 
 the maximum amount of look-back in frame history containing relevant information for reasoning, 
 and the number of object distractors (see~\cref{tab:cog_variants}).
-For CLEVR, we consider the CoGenT (Constrained Generalization Test) variant which contains two conditions, differing on the combinations of attributes values (details in~\cref{sec:temporal}).
+For CLEVR, we consider the CoGenT (Constrained Generalization Test) variant which contains two conditions, differing on the combinations of attribute values (details in~\cref{sec:temporal}).
 %In some of our experiments, we also compare using a \emph{zero-shot learning} approach  for transfer learning to another approach
 %involving \emph{finetuning}.
 %Recall that the former involves evaluating the trained model of the source directly on the target while for the latter we do additional lightweight 
@@ -88,7 +88,7 @@ For the CLEVR dataset, we consider the question categories defined by the author
 Noticeable results are shown in~\cref{fig:CoGenT-results}, while the complete set is available in the supplementary material.%Appendix \ref{sec:full-cogent-results}.
 
 
-Looking at~\cref{fig:CoGenT-results}, SAMNet does well on \textit{Count} and \textit{QueryAttribute}, but poorer on the 3 other tasks in the single-task learning setting (blue). Indeed, \textit{Exist}, \textit{CompareInteger} and \textit{CompareAttribute} are binary tasks; \textit{Count} has output labels digits 0 through 10 (so $<$10\% accuracy by chance) and \textit{QueryAttribute} maps to the set of object attributes values (15 labels).
+Looking at~\cref{fig:CoGenT-results}, SAMNet does well on \textit{Count} and \textit{QueryAttribute}, but poorer on the 3 other tasks in the single-task learning setting (blue). Indeed, \textit{Exist}, \textit{CompareInteger} and \textit{CompareAttribute} are binary tasks; \textit{Count} has output labels digits 0 through 10 (so $<$10\% accuracy by chance) and \textit{QueryAttribute} maps to the set of object-attribute values (15 labels).
 
 Nevertheless, significant accuracy gains are noted when training jointly on all tasks (gray), ranging from 18 points to 37 points on 4 out of 5 tasks. These improvements suggest that related tasks benefit from joint training. \textit{QueryAttribute} only sees an increase of one point. One could qualify it as \textit{self-sufficient} as it does not appear to benefit from joint training with other tasks. 
 %We plan to run additional experiments to jointly train on $t$ and all possible subsets of the remaining 4 tasks ($2^4$ experiments per task). We hypothesize that the improvements on e.g. \textit{Exist} would mostly originate from training jointly on \textit{CompareAttribute} and \textit{CompareInteger} since all 3 tasks share the same output space (i.e., labels domain).
@@ -217,12 +217,12 @@ performance on longer video frames with more complex scenes.
 \end{table}
 
 The final set of experiments we consider is related to feature transfer.
-The CoGenT-A \& -B sets of CLEVR differ by the available combinations of 8 object color attributes.
+The CoGenT-A \& -B sets of CLEVR differ by the available combinations of 8 object color-attributes.
 The colors are partitioned into two complementary families: 
 Gray, Blue, Brown and Yellow in \textbf{Family A} and Red, Green, Purple, Cyan in \textbf{Family B}. 
 The cubes and cylinders take colors from complementary families in each dataset with opposite configurations while
 the spheres can take any color (See~\cref{tab:cogent_conditions}). 
-Considering the input domain to be the set of objects with all attributes values, both sets differ by their marginal distributions $P_S$ and $P_T$. We consider 2 experiments with SAMNet trained on CoGenT-A: An immediate test (zero-shot learning) from A to B and a finetuning of a single epoch on 30k Conditions B samples (following~\cite{johnson2017inferring, mascharka2018transparency, perez2018film, marois2018transfer}). The results are available in~\cref{fig:CoGenT-B-results}.
+Considering the input domain to be the set of objects with all attribute values, both sets differ by their marginal distributions $P_S$ and $P_T$. We consider 2 experiments with SAMNet trained on CoGenT-A: An immediate test (zero-shot learning) from A to B and a finetuning of a single epoch on 30k Conditions B samples (following~\cite{johnson2017inferring, mascharka2018transparency, perez2018film, marois2018transfer}). The results are available in~\cref{fig:CoGenT-B-results}.
 
 \begin{figure}[!t]
 	\centering
