--- a/cvpr_submission/introduction.tex
+++ b/cvpr_submission/introduction.tex
@@ -7,7 +7,7 @@ One of the widely used solutions for the above mentioned problems is Transfer Le
 
 %pan2009survey: we categorize transfer learning under three sub-settings: inductive transfer learning, transductive transfer learning and unsupervised transfer learning, 
 
-In Computer Vision, it is now standard practice to pre-train an image encoder (such as VGG~\cite{simonyan2014very} or ResNet~\cite{he2016deep}) on large-scale datasets (such as ImageNet~\cite{deng2009imagenet}), and reuse the weights in unrelated domains and tasks, such as Visual Question Answering (VQA) in a medical domain~\cite{kornuta2019leveraging} or pixel-wise image segmentation of cars~\cite{iglovikov2018ternausnet}.
+In Computer Vision, it is now standard practice to pretrain an image encoder (such as VGG~\cite{simonyan2014very} or ResNet~\cite{he2016deep}) on large-scale datasets (such as ImageNet~\cite{deng2009imagenet}), and reuse the weights in unrelated domains and tasks, such as Visual Question Answering (VQA) in a medical domain~\cite{kornuta2019leveraging} or pixel-wise image segmentation of cars~\cite{iglovikov2018ternausnet}.
 Such performance improvements are appealing, especially for cases where both the domain (e.g. realistic images vs. medical or cars ones) and the task (e.g. image classification vs. VQA or image segmentation) can change significantly. %This type of transfer learning is qualified as \emph{inductive}, according to the taxonomy from~\cite{pan2009survey}.
 
 A similar development has emerged in the Natural Language Processing (NLP) community.
@@ -20,7 +20,8 @@ The success of transfer learning raises several questions for research, such as 
 One of the most systematic work in this area is the computational taxonomic map for task transfer learning~\cite{zamir2018taskonomy}, which aim to discover the dependencies across a dictionary of twenty-six 2D, 2.5D, 3D, and semantic tasks.
 
 In this work, we focus on multi-modal learning~\cite{mogadala2019trends} combining vision and language,
-and in particular, transfer learning for visual reasoning tasks with a rich logical structure, e.g., see~\cite{johnson2017clevr,yang2018dataset}. 
+and in particular, transfer learning for visual reasoning tasks that have a ``nice'' logical structure, e.g., 
+see~\cite{johnson2017clevr,yang2018dataset,song2018explore}. 
 While models such as BERT and ResNet can be transferred efficiently in the same modality they were pretrained on, challenges arise
 once the modalities have been fused.
 For example, the CoGenT (Constrained Generalization Test) variant of the CLEVR~\cite{johnson2017clevr}  
@@ -33,12 +34,15 @@ transfer over to longer sequences, e.g., the Canonical and the Hard variants of 
 COG dataset~\cite{yang2018dataset} (\cref{sec:temporal}).
 To address these challenges, mechanisms such as attention~\cite{bahdanau2014neural} 
 and external memory~\cite{graves2014neural, graves2016hybrid,weston2014memory} 
-which facilitate higher-level abstractions, seem more promising.
+which facilitate higher-level abstractions, seem more promising. 
 
-Our main contributions are:
-\begin{itemize}
+\smallskip
+
+\noindent Motivated by these considerations:
+%Consequently:
+\begin{enumerate}
 	%\compresslist
 	\item We propose a new model, called SAMNet (Selective Attention Memory Network), which achieves state-of-the-art results on COG~\cite{yang2018dataset}, a Video QA reasoning dataset.
 	\item We propose a taxonomy of transfer learning, inspired from~\cite{pan2009survey}, applied to the domain of visual reasoning. Articulated around 3 main axes, we illustrate it through the COG dataset, as well as the CLEVR~\cite{johnson2017clevr} diagnostic dataset for Image QA.
-	\item Following, we measure the impact of transferring the whole pretrained SAMNet model in the 3 proposed transfer learning settings: feature transfer, temporal transfer and reasoning transfer. This analysis is supported by an extensive set of experiments using the COG and CLEVR datasets, as well as their variants. Several of these experiments show the significant generalization capabilities of SAMNet.
-\end{itemize}
+	\item Subsequently, we measure the impact of transferring the whole pretrained SAMNet model in the 3 proposed transfer learning settings: feature transfer, temporal transfer and reasoning transfer. This analysis is supported by an extensive set of experiments using the COG and CLEVR datasets, as well as their variants. Several of these experiments show significant transfer learning capabilities of SAMNet.
+\end{enumerate}
