--- a/cvpr_submission/transfer_learning.tex
+++ b/cvpr_submission/transfer_learning.tex
@@ -17,7 +17,7 @@ question\footnote{%
 	For the COG dataset, the answer is a tuple, one for each frame in the video, whereas for typical video answering datasets,
 	only a single answer is needed for the entire video.}. % 
 If the domain elements consist of just the visual inputs, then the task is defined by the question so that each question 
-defines a separate task.\newline
+defines a separate task.
 
 \begin{definition}[\cite{pan2009survey}]
 	\label{defn:transfer}
@@ -30,11 +30,11 @@ Similarly, $\cT_S \ne \cT_T$ means that either $Y_S \ne Y_T$ or that the associa
 Although~\cref{defn:transfer} is quite general, it does not adequately capture all artifacts present in visual reasoning.
 For example, consider the transfer learning setting where the tasks $\cT_S$ and $\cT_T$ are the same 
 but the marginal distributions $P_S$ and $P_T$ are different (referred to as \emph{domain adaptation}).
-One setting is the case of static images, where this could be due to having different feature combinations in the source and
-target but a different setting is in the context of video reasoning where the number of frames can be small in one case and 
-large in another.
-These require possibly very different methods, one involving building disentangled feature representations that can generalize across 
-domains and another in which we might need memory-augmented neural networks that can generalize across frame lengths.
+As mentioned in the introduction, one setting is the case of static images, 
+where this could be due to having different feature combinations in the source and target.
+A different setting is in the context of video reasoning where the number of frames can increase significantly going from source to target.
+These require possibly very different methods: the first involves building disentangled feature representations that can generalize across 
+domains; the second might need external memory to remember relevant objects to generalize across frame lengths.
 Another situation is when the questions themselves can be grouped into families such as count-based queries, 
 comparison of objects, or existence of objects with certain features etc.
 This entails studying transfer learning between families of tasks which requires extending the above definition.
@@ -42,7 +42,7 @@ This entails studying transfer learning between families of tasks which requires
 Broadly, we consider 3 kinds of transfer learning problems in this work, as illustrated in~\cref{fig:taskonomy}. 
 Let $\cQ$ denote the set of questions and $\cV$ denote the set of visual inputs.
 \begin{description}
-	\compresslist % used to reduce spacing
+	%\compresslist % used to reduce spacing
 	\item[Feature Transfer:] In this setting of domain adaptation, $\cX_S = \cX_T \subseteq \cQ \times \cV$
 	and the task $f(q,v)$ is just the answer to the question $q$ on $v$. The output set $\cY$ is the union of legitimate answers
 	over all questions in $\cQ$.
