--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -52,6 +52,17 @@
 	year   = {2019},
 }
 
+@article{hochreiter1997long,
+	title={Long short-term memory},
+	author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+	journal={Neural computation},
+	volume={9},
+	number={8},
+	pages={1735--1780},
+	year={1997},
+	publisher={MIT Press}
+}
+
 @InProceedings{das2017visual,
 	author    = {Das, Abhishek and Kottur, Satwik and Gupta, Khushi and Singh, Avi and Yadav, Deshraj and Moura, Jos{\'e} MF and Parikh, Devi and Batra, Dhruv},
 	title     = {Visual dialog},
