--- a/cvpr_submission/experiments.tex
+++ b/cvpr_submission/experiments.tex
@@ -106,9 +106,9 @@ We also observe no learning for \textit{Count} and \textit{QueryAttribute}. As t
 
 An additional set of experiments, for which results are available in the supplementary material,
 %Appendix \ref{sec:full-cogent-results}
-finetune the model trained on all tasks on each task $t$ respectively.
-%Given the initial training on all tasks, we were interested in the tradeoff between the performance gain, if any, on the finetuned task and the drop, if any, on other tasks.
-Finetuning did not demonstrate a clear benefit (except for \textit{Count}, where the accuracy increased by 1.5 pt) without hurting performance on the other tasks. Nevertheless, these experiments leave open the possibility that joint training of tasks may potentially benefit from using weighted sampling towards the tail end with more emphasis on samples from less performing task groups, similar to~\cite{guo2018dynamic, kendall2018multi}.
+fine-tune the model trained on all tasks on each task $t$ respectively.
+%Given the initial training on all tasks, we were interested in the tradeoff between the performance gain, if any, on the fine-tuned task and the drop, if any, on other tasks.
+Fine-tuning did not demonstrate a clear benefit (except for \textit{Count}, where the accuracy increased by 1.5 pt) without hurting performance on the other tasks. Nevertheless, these experiments leave open the possibility that joint training of tasks may potentially benefit from using weighted sampling towards the tail end with more emphasis on samples from less performing task groups, similar to~\cite{guo2018dynamic, kendall2018multi}.
 
 \subsubsection{COG}
 \label{sec:reasoning-cog}
@@ -138,7 +138,7 @@ Below, substitute each of \textit{Shape} and \textit{Color} for  \uX{} to obtain
 \begin{figure}[!t]
 	\centering
 	\includegraphics[width=\columnwidth]{img/results/COG_reasoning_transfer_v3}
-	\caption{COG accuracies for all task groups $t$ when training on $t$ only, training on Group A or B and training on all tasks.}
+	\caption{COG accuracies for all task groups $t$ when training on $t$ only; training on Group A or B; and on all tasks.}
 	\label{fig:COG-reasoning-results}
 \end{figure}
 
@@ -147,11 +147,14 @@ whether transfer learning was effective in leveraging information gained by trai
 of the hierarchy:
  \begin{itemize}
  	\compresslist
-	\item Train and test SAMNet on each of the 5 task groups at the lowest level of the hierarchy (standard ML). 
-	\item Jointly train on \textbf{Group A} and test separately on \textbf{Basic}, \textbf{Obj-Attr} and \textbf{Compare};
-	\item Jointly train on \textbf{Group B} and test separately on \textbf{Spatial} and \textbf{Cognitive};
+	\item Train and test SAMNet on each of the 5 task groups at the lowest level of the hierarchy (Single-task training);
+	\item Jointly train on:
+	\begin{itemize}
+		\item 	 \textbf{Group A} and test on each task from the lowest groups (i.e. \textbf{Basic}, \textbf{Obj-Attr} and \textbf{Compare}) separately;
+		\item \textbf{Group B} and test separately on \textbf{Spatial} and \textbf{Cognitive};
+	\end{itemize}
 	\item As a baseline, we compared the above results to the earlier experiment shown in~\cref{fig:samnet_cog_detailed}, which
-	can be viewed as training jointly on \textbf{All} and testing on each group at the leaf level separately.
+	can be viewed as training jointly on \textbf{All} and testing on each group at the leaf level separately (All-task training).
 \end{itemize}
 
 The results of these experiments are shown in~\cref{fig:COG-reasoning-results}.
@@ -182,9 +185,9 @@ obtained by running the original code provided by the authors~\cite{yang2018impl
 
 The first column displays the scores of the traditional ML setup when training and testing on the Canonical variant. 
 The observed close scores in light and dark gray underscore the baseline model reproducibility.
-For both cases of zero-shot learning (second column--91.6\% vs 65.9\%) and finetuning using a single epoch 
+For both cases of zero-shot learning (second column--91.6\% vs 65.9\%) and fine-tuning using a single epoch 
 (third column--96.7\% vs. 78.1\%), SAMNET outperforms the baseline model significantly.
-Interestingly, this finetuning yields a mild boost of +0.6\% on the earlier reported accuracy 
+Interestingly, this fine-tuning yields a mild boost of +0.6\% on the earlier reported accuracy 
 in~\cref{sec:cog-baseline-compare} (fourth column).
 These results suggest that it suffices to train SAMNet on simpler videos 
 to enable learning of good memory usage and attention on relevant entities  
@@ -213,22 +216,29 @@ performance on longer video frames with more complex scenes.
 			\bottomrule
 		\end{tabular}
 	%\end{adjustbox}
-	\caption{Color restrictions in CoGenT-A \& -B datasets.}
+	\caption{Restrictions on feature combinations in A \& B conditions of the CoGenT variant of the CLEVR dataset.}
 	\label{tab:cogent_conditions}
 \end{table}
 
 The final set of experiments we consider is related to feature transfer.
-The CoGenT-A \& -B sets of CLEVR differ by the available combinations of 8 object color-attributes.
+The CoGenT-A \& -B variants of CLEVR differ by the available combinations of 8 object color-attributes.
 The colors are partitioned into two complementary families: 
 Gray, Blue, Brown and Yellow in \textbf{Family A} and Red, Green, Purple, Cyan in \textbf{Family B}. 
-The cubes and cylinders take colors from complementary families in each dataset with opposite configurations while
-the spheres can take any color (See~\cref{tab:cogent_conditions}). 
-Considering the input domain to be the set of objects with all attribute values, both sets differ by their marginal distributions $P_S$ and $P_T$. We consider 2 experiments with SAMNet trained on CoGenT-A: An immediate test (zero-shot learning) from A to B and a finetuning of a single epoch on 30k Conditions B samples (following~\cite{johnson2017inferring, mascharka2018transparency, perez2018film, marois2018transfer}). The results are available in~\cref{fig:CoGenT-B-results}.
+The cubes and cylinders take colors from complementary families in each variant with opposite configurations while the spheres can take any color (See~\cref{tab:cogent_conditions}). 
+As the input domain consist of the set of objects with all attribute values, both variants differ by their marginal distributions $P_S$ and $P_T$.
+We conduct 2 experiments with SAMNet trained on CoGenT-A:
+\begin{itemize}
+\item an immediate test (zero-shot learning) from A to B; and 
+\item fine-tuning for a single epoch on 30k samples from CoGenT-B (following~\cite{johnson2017inferring, mascharka2018transparency, perez2018film, marois2018transfer}).
+\end{itemize}
 
 \begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.8\columnwidth]{img/results/CoGenT_B_results.pdf}
-	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and finetuning on CoGenT-B (gray).}
+	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and fine-tuning on CoGenT-B (gray).}
 	\label{fig:CoGenT-B-results}
 \end{figure}
-Evaluating SAMNet on CoGenT shows that performance is worse on CoGenT-B than CoGenT-A, in line with~\cite{johnson2017inferring, mascharka2018transparency, perez2018film}. Finetuning for a single epoch allows an observable increase of 15 pts on CoGenT-B, and a slight drop on CoGenT-A, also observed with other models.
+
+Performance of SAMNet on CoGenT (\cref{fig:CoGenT-B-results}) is clearly worse on CoGenT-B than CoGenT-A.
+Fine-tuning for a single epoch allows an observable increase of 15 pts on CoGenT-B, and a slight drop on CoGenT-A.
+Both are consistent with findings from the literature~\cite{johnson2017inferring, mascharka2018transparency, perez2018film}.
