--- a/cvpr_submission/summary.tex
+++ b/cvpr_submission/summary.tex
@@ -2,9 +2,13 @@
 
 %Observing attention maps shows that SAMNet can effectively perform multi-step reasoning over questions and frames as intended. Despite being trained only on image-question pairs with complex, compositional questions, SAMNet clearly learns to associate visual symbols with words and accurately classify temporal contexts as designed. Besides, the model’s reasoning using neural representations appears to be similar to how a human would operate on abstract symbols when solving the same task, including memorizing and recalling symbols (object embeddings) from the memory when needed. This is not perfect however and the system can sometimes store spurious objects despite the gating and reasoning mechanisms, but still give correct answers. This indicates at least two directions for possible further improvements. The first is to ameliorate content-based addressing with masking, similar to the improvements made for DNC proposed by [2]. Second is to implement variable number of reasoning steps, instead of hard-coded 8 steps, which could utilize Adaptive Computation Time (ACT) [5].
 
-In this paper, through the introduction of a novel Memory-Augmented Neural Network model, SAMNet, we have quantified the impact of Transfer Learning in Visual Reasoning. Designed to learn to reason over sequences of frames (i.e., static images), SAMNet shows significant improvements, on the video reasoning dataset COG, over the corresponding baseline. Analysis of the results highlights the model's ability to operate independently of the number of frames and generalize to samples with higher complexity, characterized by longer sequences and more complex scenes.
-%However, SAMNet can sporadically store spurious objects in the memory, despite its mechanisms. This doesn't prevent the model to produce accurate predictions.
+In this paper we quantified the impact of Transfer Learning on Visual Reasoning. 
+We have proposed a new taxonomy of transfer learning for Visual Reasoning, articulated around three axes: feature, temporal and reasoning transfer. 
+We have also introduced a novel Memory-Augmented Neural Network model called SAMNet.
+SAMNet, designed to learn to reason over sequences of frames, shows significant improvements over SOTA models on the COG dataset for Video Reasoning  and achieves comparable performances on the CLEVR dataset for Image Resoning.
 
-We also introduce a new taxonomy of transfer learning for visual reasoning, articulated around three axes: feature transfer, temporal transfer and reasoning transfer. To highlight the robustness of this taxonomy, we realize an extensive set of experiments with SAMNet over two datasets: COG and CLEVR, a diagnostic dataset for Question Answering over static images. SAMNet demonstrates clear generalization capabilities along certain axes and, through the cautious use of finetuning, further advances performance in visual reasoning.
+Taking that as a starting point and leveraging on the proposed taxonomy, we  have conducted an extensive set of experiments, with focus on impact of transfer learning in areas that might be considered as higher-level reasoning.
+SAMNet demonstrated very good generalization capabilities along certain axes and, through the cautious use of fine-tuning, we have managed to eleviate its performance even further.
 
-We hope these contributions can bolster new research directions to acutely apply transfer learning to areas in need of data and continue exploring the conceivable performance improvements.
+Finally, we note that some of the proposed tasks (e.g. Train on all but \textit{t}) are complementary to the ones already well established in the literature, e.g. in taskonomy~\cite{zamir2018taskonomy}.
+We hope these contributions will bolster new research directions to acutely apply transfer learning to areas in need of data and continue exploring the conceivable performance improvements.
