Added Clevr citation

--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -31,7 +31,7 @@
     \label{tab:cogent_conditions_supplement}
 \end{table}
 
-The CoGenT dataset contains:
+The CoGenT dataset~\cite{johnson2017clevr} contains:
 \begin{itemize}
 	\def\labelitemi{--}
 	\item Training set of 70,000 images and 699,960 questions in Condition A,
